# piksel

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md  shell.html  windows.patch
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/examples/: astar.md  fireworks.md  quadtree.md
docs/examples/astar/: astar.md
docs/examples/astar/_media/: astar.html  astar.js  astar.wasm  index.js  index.wasm
docs/examples/fireworks/: fireworks.md
docs/examples/fireworks/_media/: fireworks.html  fireworks.js  fireworks.wasm
docs/examples/input/: input.md
docs/examples/input/_media/: input.html  input.js  input.wasm
docs/examples/mariobreaksout/: mariobreaksout.md
docs/examples/mariobreaksout/_media/: mariobreaksout.data  mariobreaksout.html  mariobreaksout.js  mariobreaksout.wasm
docs/examples/quadtree/: quadtree.md
docs/examples/quadtree/_media/: index.html  index.js  index.wasm  quadtree.html  quadtree.js  quadtree.wasm
docs/examples/thaem/: thaem.md
docs/examples/thaem/_media/: thaem.html  thaem.js  thaem.wasm
docs/gettingstarted/: buildonwindows.md  buildproject.md  setupproject.md  troubleshooting.md  windowsaddendum.md
docs/reference/: baseapp.md  constants.md  drawmode.md  font.md  graphics.md  image.md  rng.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/piksel/: baseapp.cpp  baseapp.hpp  constants.hpp  drawmode.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  image.cpp  image.hpp  internals.hpp  rng.cpp  rng.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  state.hpp
src/piksel/ext/: animation.cpp  animation.hpp  rng.hpp  sprite.cpp  sprite.hpp  spritesheet.cpp  spritesheet.hpp  timer.cpp  timer.hpp
src/piksel/shaders/: main.frag  main.vert  post.frag  post.vert
